# tsplineforge

./: .env.example  .eslintrc.json  .gitignore  ADVANCED_FEATURES.md  ARCHITECTURE.md  BUILD_COMPLETE.md  CLAUDE_INTEGRATION_COMPLETE.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  EDITOR_FUNCTIONALITY_STATUS.md  EDITOR_QA_TEST_PLAN.md  FEATURE_21_DEVELOPER_GUIDE.md  FEATURE_21_FINAL_STATUS.md  FEATURE_21_IMPLEMENTATION_CHECKLIST.md  FEATURE_21_SUMMARY.md  FINAL_STATUS_REPORT.txt  FINAL_SUMMARY.md  GITHUB_SETUP.md  IMPLEMENTATION_INDEX.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_LOG.md  LOCAL_SETUP_GUIDE.md  PHASE_5_COMPLETE.md  PRODUCTION_STATUS.md  QUICK_REFERENCE.md  QUICK_START.md  QUICK_START_LOCAL.md  README.md  RUN_LOCAL.md  SESSION_COMPLETION_SUMMARY.md  STEP_IGES_IMPLEMENTATION_NOTES.md  TEST_CHECKLIST.md  USAGE_GUIDE.md  VALIDATION_REPORT.md  docker-compose.yml  install-dependencies.sh  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
.claude/: settings.json  settings.local.json
.github/workflows/: build.yml  deploy.yml  test.yml
apps/web/: jest.config.js  jest.setup.js  next.config.ts  package.json  tailwind.config.ts
apps/web/.e2e/: auth.spec.ts  playwright.config.ts
apps/web/.storybook/: Button.stories.tsx  main.ts
apps/web/public/: api-spec.json  sw.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/src/components/: ServiceWorkerManager.tsx
docs/: API.md  CLAUDE_INTEGRATION.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  GETTING_STARTED.md
infrastructure/database/: init.sql
infrastructure/database/migrations/: 001_initial_schema_and_claude.sql
infrastructure/docker/: Dockerfile.gateway  Dockerfile.geometry  Dockerfile.web
infrastructure/k8s/: configmap.yaml  deployment-gateway.yaml  namespace.yaml  statefulset-database.yaml
infrastructure/monitoring/: prometheus.yml
infrastructure/nats/: nats.conf
scripts/: verify-setup.sh
services/ai-topology/: main.py  requirements.txt
services/gateway/: package.json  tsconfig.json
services/gateway/src/: index.ts
services/geometry-engine/: Cargo.toml
services/geometry-engine/src/: curvature.rs  io.rs  lib.rs  mesh.rs  spatial.rs  topology.rs  utils.rs  validation.rs
services/geometry-engine/tests/: integration_tests.rs
services/remesh-engine/: Cargo.toml
services/remesh-engine/src/: field.rs  lib.rs  optimizer.rs  remesher.rs  singularity.rs
services/surface-fitting/: Cargo.toml
services/surface-fitting/src/: diagnostics.rs  fitting.rs  lib.rs  solver.rs
services/tspline-kernel/: Cargo.toml
services/tspline-kernel/src/: continuity.rs  evaluation.rs  lib.rs  refinement.rs  tmesh.rs
(+118 files in other folders)
