[package]
name = "remesh-engine"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[[bin]]
name = "remesh-server"
path = "src/bin/server.rs"

[dependencies]
geometry-engine = { path = "../geometry-engine" }
nalgebra = "0.33"
nalgebra-glm = "0.18"
petgraph = "0.6"
rayon = "1.8"
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
criterion = "0.5"
