[package]
name = "surface-fitting"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"

[[bin]]
name = "fitting-server"
path = "src/bin/server.rs"

[dependencies]
geometry-engine = { path = "../geometry-engine" }
tspline-kernel = { path = "../tspline-kernel" }
nalgebra = "0.33"
nalgebra-glm = "0.18"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

[dev-dependencies]
criterion = "0.5"
